# exportar-relatorios

./: README.md  main.py  pyproject.toml
core/: exportar_relatorios_v2.py
