[project]
name = "exportarrelatorios"
version = "0.1.0"
description = "Exportar Relatórios"
authors = [
    { name = "Rafael Costa", email = "Trafaeladriancordeirocosta@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "selenium>=4.31.0",
]
